SCRD-826 Fix button shifting when show progress log
also miscellaneous minor fixes

--- a/src/styles/components/serverprovision.less
+++ b/src/styles/components/serverprovision.less
@@ -1,8 +1,5 @@
 .server-provision {
-  .body-container {
-    margin: 2em;
-  }
   .button-container {
-    margin: 2em;
+    margin-top: 2em;
   }
 }
